# cadflow

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml  visualize.md
src/cad_cli/: __init__.py  ai.py  alignment.py  cad.py  cli.py  errors.py  pipeline.py  schemas.py  storage.py  vlm.py  vlm_iterate.py
tests/: test_ai.py  test_cad_builder.py  test_vlm.py
